Fixed element overlap

--- a/wp-content/themes/storefront-child-theme-master/scss/woocommerce/product-page.scss
+++ b/wp-content/themes/storefront-child-theme-master/scss/woocommerce/product-page.scss
@@ -9,7 +9,6 @@
 
     .woocommerce-product-gallery {
       width: 50%;
-      height: 600px;
 
       figure {
         height: 100%;
